cluster/apps/networking/traefik/dashboard.d/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) # && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: basicauth
        - name: crowdsec-traefik-bouncer
        - name: rfc1918
      services:
        # - name: api@internal
        #   kind: TraefikService
        - name: traefik
          namespace: networking
          port: 9000
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
